--- a/app/views/home/hpg.html.erb
+++ b/app/views/home/hpg.html.erb
@@ -1,3 +1,3 @@
 <h1>sdfgdsgsdg</h1>
 
-#<%= link_to 'About', about_abpg_path %>
+<%= link_to "alpha blog", articles_path %> | <%= link_to 'About', about_abpg_path %>
