--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,11 @@
 @import "bootstrap-sprockets";
-@import "bootstrap";
+@import "bootstrap"
+
+ #logo{
+   float: left;
+   font-size: 1.7em;
+   color: green;
+   text-transform: uppercase;
+   letter-spacing: -1px;
+   font-weight: bold;
+ }
