create homepage and add links

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,4 @@
-@import "bootstrap-sprockets";
-@import "bootstrap"
+@import "bootstrap";
 
  #logo{
    float: left;
@@ -9,3 +8,27 @@
    letter-spacing: -1px;
    font-weight: bold;
  }
+
+.center{
+  text-align: center;
+}
+
+.jumbotron{
+  background-image: asset-url('a.jpeg');
+  background-size: cover;
+  height: 550px;
+}
+
+.jumbotron h1{
+  color: #fff;
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: -1px;
+  font-weight: bold;
+  font-size: 3em;
+}
+
+.btn-xlarge{
+  font-size: 1.7em;
+  background-color: black;
+}
