--- a/app/views/home/hpg.html.erb
+++ b/app/views/home/hpg.html.erb
@@ -1,3 +1,6 @@
-<h1>Home</h1>
+<div class="center jumbotron">
+  <h1>Blog</h1>
 
-<%= link_to "alpha blog", articles_path %> | <%= link_to 'About', about_abpg_path %>
+  <%= link_to "Sign up", "#", class: "btn btn-success btn-lg btn-xlarge" %>
+
+</div>
