--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -7,17 +7,25 @@
 </ul>
 <% end %>
 
+
 <%= form_for @article do |f| %>
-  <p>
-    <%= f.label :title %></br>
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :description %></br>
-    <%= f.text_area :description %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
+  <div class="form-group row">
+    <%= f.label :title, class:"col-sm-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :title, class: "form-control", placeholder: "Title", autofocus: true %>
+    </div>
+  </div>
+  <div class="form-group row">
+    <%= f.label :description, class:"col-sm-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= f.text_area :description, rows: 5, class: "form-control", placeholder: "description", autofocus: true %>
+    </div>
+  </div>
+  <div class="form-group row col-sm-10">
+    <%= f.submit class: "btn btn-primary btn-lg"%>
+  </div>
 <% end %>
-<%= link_to "article listing", articles_path %>
+
+<div align="center">
+  [ <%= link_to "cancel request and return to article listing", articles_path %> ]
+</div>
