--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,12 +1,4 @@
-<% if @article.errors.any? %>
-<h1>ERRORS</h1>
-<ul>
-  <% @article.errors.full_messages.each do |msg|%>
-    <li><%= msg %></li>
-  <% end %>
-</ul>
-<% end %>
-
+<%= render 'shared/errors', obj: @article %>
 
 <%= form_for @article do |f| %>
   <div class="form-group row">
