add styling to show template

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -32,3 +32,12 @@
   font-size: 1.7em;
   background-color: black;
 }
+
+.article-actions{
+  border-top:  1px solid #eaeaea;
+  padding-top: 5px;
+}
+
+.description{
+  margin-top: 0px;
+}
