--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,11 +1,14 @@
-<h1>showing selected asrticle</h1>
+<h2 align="center">Title: <%= @article.title %></h2>
+<div class="card card-body bg-light">
+  <h4 class="center"><strong>Description:</strong></h4>
+  <hr>
+  <%= simple_format(@article.description) %>
+  <div class="article-actions">
+    <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-sm btn-primary" %>
+    <%= link_to "Delete this article", article_path(@article), method: :delete,
+                                        data: {confirm: "are you sure?"},
+                                        class: "btn btn-sm btn-danger" %>
+    <%= link_to "View all articles", articles_path, class: "btn btn-sm btn-success" %>
 
-<p>
-  Title: <%= @article.title %>
-</p>
-<p>
-  Description: <%= @article.description %>
-</p>
-
-<%= link_to "edit this article", edit_article_path(@article) %> |
-<%= link_to "article listing", articles_path %>
+  </div>
+</div>
