Style articles listing page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -41,3 +41,16 @@
 .description{
   margin-top: 0px;
 }
+
+.article-title{
+  font-weight: bold;
+  font-size: 1.5em;
+  padding-left: 20px
+}
+
+.article_body{
+  border-top: 1px solid #eaeaea;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 15px;
+}
