--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,21 +1,19 @@
-<h1>all articles</h1>
-<p>
-  <%= link_to "Create new article", new_article_path%>
-</p>
+<h1 align="center">all articles</h1>
 
-<table>
-    <tr>
-      <th>Tile</th>
-      <th>Description</th>
-    </tr>
+<% @articles.each do |article| %>
+<div class="card border-default text-default mb-3">
 
-    <% @articles.each do |article| %>
-      <tr>
-        <td><%= article.title%></td>
-        <td><%= article.description %></td>
-        <td><%= link_to "Edit", edit_article_path(article) %> | </td>
-        <td><%= link_to "Show", article_path(article)%> | </td> 
-        <td><%= link_to 'Delete', article_path(article), method: :delete, data: {confirm: "are you sure?"} %></td>
-      </tr>
-    <% end %>
-</table>
+    <div class="article-title">
+      <td><%= link_to article.title, article_path(article) %></td>
+    </div>
+    <div class="article_body">
+      <%= truncate(article.description, length: 100) %>
+    </div>
+    <div class="article-actions">
+      <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-sm btn-primary" %>
+      <%= link_to "Delete this article", article_path(article), method: :delete,
+                                          data: {confirm: "are you sure?"},
+                                          class: "btn btn-sm btn-danger" %>
+    </div>
+</div>
+<% end %>
