--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,6 +33,11 @@
   background-color: black;
 }
 
+.article-meta-details{
+  border-top: 1px solid #eaeaea;
+  margin-top: 15px
+}
+
 .article-actions{
   border-top:  1px solid #eaeaea;
   padding-top: 5px;
