--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,6 +1,7 @@
 <%= render 'shared/errors', obj: @article %>
 
 <%= form_for @article do |f| %>
+<div>
   <div class="form-group row">
     <%= f.label :title, class:"col-sm-2 col-form-label" %>
     <div class="col-sm-10">
@@ -16,6 +17,7 @@
   <div class="form-group row col-sm-10">
     <%= f.submit class: "btn btn-primary btn-lg"%>
   </div>
+</div>
 <% end %>
 
 <div align="center">
