--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,33 +1,3 @@
-<h1 align="center">Signup for Blog</h1>
+<h1 align="center">Sig nup for Blog</h1>
 
-<%= render 'shared/errors', obj: @user %>
-
-<%= form_for @user do |f| %>
-<div>
-  <div class="form-group row">
-    <%= f.label :username, class:"col-sm-2 col-form-label" %>
-    <div class="col-sm-10">
-      <%= f.text_field :username, class: "form-control", placeholder: "Enter username", autofocus: true %>
-    </div>
-  </div>
-  <div class="form-group row">
-    <%= f.label :email, class:"col-sm-2 col-form-label" %>
-    <div class="col-sm-10">
-      <%= f.email_field :email, class: "form-control", placeholder: "Enter email" %>
-    </div>
-  </div>
-  <div class="form-group row">
-    <%= f.label :password, class:"col-sm-2 col-form-label" %>
-    <div class="col-sm-10">
-      <%= f.password_field :password, class: "form-control", placeholder: "Enter password" %>
-    </div>
-  </div>
-  <div class="form-group row ">
-    <%= f.submit "Sign up", class: "btn btn-primary btn-lg"%>
-  </div>
-
-<% end %>
-
-<div align="center">
-  [ <%= link_to "cancel request and return to article listing", articles_path %> ]
-</div>
+<%= render 'form' %>
