--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,25 +1,3 @@
 <h1 align="center">all articles</h1>
 
-<% @articles.each do |article| %>
-<div class="card border-default text-default mb-3">
-
-    <div class="article-title">
-      <td><%= link_to article.title, article_path(article) %></td>
-    </div>
-    <div class="article_body">
-      <%= truncate(article.description, length: 100) %>
-      <div class="article-meta-details">
-        <small>Created by: <%= article.user.username if article.user %>
-                           <%= time_ago_in_words(article.created_at) %> ago,
-              last updated: <%= time_ago_in_words(article.updated_at) %> ago
-        </small>
-      </div>
-    </div>
-    <div class="article-actions">
-      <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-sm btn-primary" %>
-      <%= link_to "Delete this article", article_path(article), method: :delete,
-                                          data: {confirm: "are you sure?"},
-                                          class: "btn btn-sm btn-danger" %>
-    </div>
-</div>
-<% end %>
+<%= render 'article', obj: @articles %>
