--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,15 @@
 <h2 align="center">Title: <%= @article.title %></h2>
 <div class="card card-body bg-light">
+  <ul class="listing">
+    <div>
+      <div class="center">
+        <li>created by:</li>
+        <li><%= link_to(gravatar_for(@article.user), user_path(@article.user)) if @article.user %></li>
+        <li><h3><%= link_to(@article.user.username, user_path(@article.user)) if @article.user %></h3></li>
+        <li><small><%= pluralize(@article.user.articles.count, "article") if @article.user.articles %></small></li>
+      </div>
+    </div>
+  </ul>
   <h4 class="center"><strong>Description:</strong></h4>
   <hr>
   <%= simple_format(@article.description) %>
