--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
 <h1 align="center">All Bloggers</h1>
 <div align="center">
+  <%= will_paginate %>
   <% @users.each do |user| %>
     <ul class="listing">
       <div class="card border-default" style="width: 20rem;">
@@ -11,4 +12,5 @@
       </div>
     </ul>
   <% end %>
+  <%= will_paginate %>
 </div>
