--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,5 +5,6 @@
     <h4 align="center"><%= @user.username %>'s articles</h4>
   </div>
 </div>
-
-<%= render 'articles/article', obj: @user.articles %>
+<%= will_paginate @user_articles %>
+<%= render 'articles/article', obj: @user_articles %>
+<%= will_paginate @user_articles %>
