--- a/app/views/home/hpg.html.erb
+++ b/app/views/home/hpg.html.erb
@@ -1,6 +1,6 @@
 <div class="center jumbotron">
   <h1>Blog</h1>
 
-  <%= link_to "Sign up", "#", class: "btn btn-success btn-lg btn-xlarge" %>
+  <%= link_to "Sign up", signup_path, class: "btn btn-success btn-lg btn-xlarge" %>
 
 </div>
