--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,20 +9,33 @@
       <li class="nav-item">
         <%= link_to "Articles", articles_path, class: "nav-link" %>
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Actions
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a><%= link_to "New Article", new_article_path, class: "dropdown-item" %></a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <%= link_to "Users", users_path, class: "nav-link" %>
       </li>
+      <li class="nav-item dropdown">
+        <% if logged_in? %>
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Your profile
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a><%= link_to "New Article", new_article_path, class: "dropdown-item" %></a>
+            <a <%= link_to "Edit your profile", edit_user_path(current_user), class:"dropdown-item" %></a>
+            <div class="dropdown-divider"></div>
+            <a <%= link_to "View your profile", user_path(current_user), class: "dropdown-item" %></a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Log out", logout_path, method: :delete, class: "nav-link" %>
+        </li>
+      <% else %>
+        <li class="nav-item">
+          <%= link_to "Log in", login_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Sign up", signup_path, class: "nav-link" %>
+        </li>
+
+      <% end %>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
