--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -14,12 +14,12 @@
   <hr>
   <%= simple_format(@article.description) %>
   <div class="article-actions">
-    <% if logged_in? && current_user == @article.user %>
+    <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
       <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-sm btn-primary" %>
       <%= link_to "Delete this article", article_path(@article), method: :delete,
                                           data: {confirm: "are you sure?"},
                                           class: "btn btn-sm btn-danger" %>
-   <% end %>                                    
+   <% end %>
     <%= link_to "View all articles", articles_path, class: "btn btn-sm btn-success" %>
 
   </div>
