--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,7 +15,7 @@
       <li class="nav-item dropdown">
         <% if logged_in? %>
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Your profile
+            Your profile <%= "Admin" if current_user.admin? %>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a><%= link_to "New Article", new_article_path, class: "dropdown-item" %></a>
