--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,7 +13,25 @@
         <%= link_to "Users", users_path, class: "nav-link" %>
       </li>
       <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Categories
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a><%= link_to "All categories", categories_path, class: "dropdown-item" %></a>
+          <% Category.all.each do |category| %>
+            <a>
+              <%= link_to "#{category.name}", category_path(category), class:"dropdown-item" %>
+            </a>
+          <% end %>
+          <% if logged_in? and current_user.admin? %>
+            <div class="dropdown-divider"></div>
+            <a <%= link_to "Create new category", new_category_path, class: "dropdown-item" %></a>
+          <% end %>
+        </div>
+
+      </li>
         <% if logged_in? %>
+        <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Your profile <%= "Admin" if current_user.admin? %>
           </a>
