--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -12,7 +12,13 @@
                 last updated: <%= time_ago_in_words(article.updated_at) %> ago
           </small>
         </div>
+        <% if article.categories.any? %>
+          <div class="article-meta-details">
+              <p>Categories: <%= render article.categories %></p>
+          </div>
+        <% end %>
       </div>
+
       <% if logged_in? && (current_user == article.user || current_user.admin?) %>
         <div class="article-actions">
           <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-sm btn-primary" %>
