--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -15,6 +15,11 @@
     </div>
   </div>
   <div class="form-group row col-sm-10">
+    <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
+      <% cb.label(class: "checkbox-inline input_checkbox") {cb.check_box(class: "checkbox") + cb.text} %>
+    <% end %>
+  </div>
+  <div class="form-group row col-sm-10">
     <%= f.submit class: "btn btn-primary btn-lg"%>
   </div>
 </div>
