add edit category feature

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -5,7 +5,7 @@
   <ul class="listing" align="center" >
     <div class="card" >
       <li class="article-title">
-        <%= link_to "#{category.name}", categories_path(category) %>
+        <%= link_to "#{category.name}", category_path(category) %>
       </li>
       <li class="article-title">
         <small><%= pluralize(category.articles.count, "article") %></small>
